--- a/Ch01_Intro.ipynb
+++ b/Ch01_Intro.ipynb
@@ -19,7 +19,9 @@
     "#### ㅇ과목명 : 데이터 분석과 시각화 \n",
     "#### ㅇ과목 개요 :  \n",
     "#### >>> Python 패키지 라이브러리들을 활용하여 데이터 분석 방법을 익힌다.\n",
-    "#### >>> 데이터로부터 기본 그래프 그리기, 텍스트 마이닝, 지도 시각화,  머신러닝 예측분석, 웹 스크랩핑 등을 실습한다. \n",
+    "#### >>> 기본 데이터로부터 분석에 필요한 데이터들로 가공하는 방법을 익힌다.\n",
+    "#### >>> 가공된 데이터로부터 각종 그래프 그리기, 텍스트 마이닝, 지도 시각화,  머신러닝 예측분석 등의 방법을 익힌다.\n",
+    "#### >>> 웹 스크랩핑을 통해 데이터를 수집하는 방법을 익힌다. \n",
     "#### ㅇ수업 진행\n",
     "#### >>> 실습 도구 : Anaconda3, Jupyter Lab\n",
     "#### >>> 과제 제출 : LMS의 해당 주차에 업로드\n",
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9fbba289-5989-4dd2-8d24-e2486e612f34",
    "metadata": {},
    "outputs": [
@@ -205,15 +207,14 @@
        "13                                     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "#lect = pd.read_csv('lect_schedule.csv', index=False, encoding='utf-8')\n",
-    "lect = pd.read_excel('lect_schedule.xlsx')\n",
+    "lect = pd.read_excel('Ch01_lect_schedule.xlsx')\n",
     "lect"
    ]
   },
@@ -222,8 +223,7 @@
    "id": "8ab1d594-58fd-49a8-b5d7-c57407913216",
    "metadata": {},
    "source": [
-    "-----------\n",
-    "## ▶평가 계획\n",
+    "### ▶평가 계획\n",
     "### ㅇ반영 비율 \n",
     "#### > 출석 : 20% \n",
     "#### > 과제(문제 해결) : 20% \n",
