--- a/Ch17_DataStructure.ipynb
+++ b/Ch17_DataStructure.ipynb
@@ -7,6 +7,13 @@
    "source": [
     "----\n",
     "# **▩ Ch17 데이터 분석을 위한 데이터 구조 다루기**\n",
+    "----\n",
+    "##### #int() #float() #str() #bool() \n",
+    "##### #lower() #upper() #capitalize() #title() #replace() #find() #split() \n",
+    "##### #list() #tuple() #dict() \n",
+    "##### #append() #pop() #remove() #insert() #index() #sort()\n",
+    "##### #len() #sorted() #del() #clear() #max() #min() #sum()\n",
+    "##### #Series() #DataFrame()\n",
     "----"
    ]
   },
@@ -362,10 +369,10 @@
    "metadata": {},
    "source": [
     "## **ㅇ리스트(List) 형** : [ ]\n",
-    "#### > 여러 개의 값들을 나열된 자료 구조\n",
-    "#### > 기본적으로 순서번호(Index)로 값에 접근\n",
-    "#### > 값의 삽입, 삭제가 가능하다.\n",
-    "#### > 각 값들은 [와 ] 안에 ,로 구분하여 초기화 한다."
+    "##### > 여러 개의 값들을 나열된 자료 구조\n",
+    "##### > 기본적으로 순서번호(Index)로 값에 접근(index는 자동 관리)\n",
+    "##### > 값의 삽입, 삭제가 가능하다.\n",
+    "##### > 각 값들은 [와 ] 안에 ,로 구분하여 초기화 한다."
    ]
   },
   {
@@ -437,6 +444,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0dacbf32-3540-4571-82ac-235688f74eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 언패킹(Unpacking)\n",
+    "b = [1, 2, ['a', 'b']]     #패킹(Packing)  \n",
+    "for x in b:\n",
+    "    if type(x) is list:\n",
+    "        for y in x:\n",
+    "            print(y)\n",
+    "    else:\n",
+    "        print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "101790f9-18f3-4175-be3d-4e1855364826",
    "metadata": {},
@@ -446,14 +481,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "fd9f1eb0-c53e-4520-a73b-bd25be532146",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 'A', 'b']"
+       "'a'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 값 검색: index로 접근\n",
+    "a = [1, 2, 'a', 'b']\n",
+    "a[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8f8ae1f9-e9c7-43f8-b770-6a32ad106277",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
       ]
      },
      "execution_count": 16,
@@ -462,7 +520,29 @@
     }
    ],
    "source": [
-    "## 값 변경\n",
+    "## index 검색: 값으로 index를 검색\n",
+    "a.index('a')        #'a'의 위치 값 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0f4fab3b-bc9f-4d9b-840d-9eea6bb29e5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 'A', 'b']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 값 변경: index로 접근\n",
     "a[2] = 'A'\n",
     "a"
    ]
@@ -472,46 +552,156 @@
    "id": "742cd279-4ce6-4481-8be7-b7151d8bfa35",
    "metadata": {},
    "source": [
-    "### **관련 메서드**\n",
-    "#### > append() 항목 값 마지막에 추가하기\n",
-    "#### > pop() 마지막 항목 값 제거하면서 반환\n",
-    "#### > remove() 항목 값으로 제거하기\n",
-    "#### > insert(index, value) index로 항목 추가하기\n",
-    "#### > index() 항목 값으로 index 값 얻기\n",
-    "#### > sort() 항목을 정렬하여 바꾸기 (매개변수 reverse=False가 기본값)"
+    "#### **관련 메서드**\n",
+    "##### > append() 항목 값 마지막에 추가하기\n",
+    "##### > pop() 마지막 항목 값 제거하면서 반환\n",
+    "##### > remove() 항목 값으로 제거하기\n",
+    "##### > insert(index, value) index로 항목 추가하기\n",
+    "##### > index() 항목 값으로 index 값 얻기\n",
+    "##### > sort() 항목을 정렬하여 바꾸기 (매개변수 reverse=False가 기본값)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "b06eee62-89d3-4b0b-9bfd-3312c5175aa6",
+   "execution_count": 18,
+   "id": "fcc0e410-3c4a-4d4d-9e55-8188b7bd7e2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 6]"
+       "[2, 3]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## 생성 및 조작\n",
-    "a = [6, 1, 0, 3, 4, 5, 6]\n",
-    "a.append(2)           #맨 마지막에 2를 추가     \n",
-    "a.insert(2, 9)        #2번째에 값 9를 추가\n",
-    "a.remove(9)           #3을 찾아 제거\n",
-    "a.index(0)            #'a'의 위치 값 반환\n",
-    "a.sort(reverse=False) #오름차순으로 정렬\n",
+    "## [리스트] 조작: append()\n",
+    "a = []\n",
+    "a.append(2)           #리스트에 2를 추가 \n",
+    "a.append(3)           #맨 마지막에 2를 추가 \n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
+   "id": "3cbdd809-a0a2-45e2-b331-283e927e0fe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## [리스트] 조작: pop()\n",
+    "a\n",
+    "a.pop()  #맨 마지막 항목을 반환하고, 제거\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ae40b68b-fed5-43c2-88b3-f2369cb718a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 1, 9, 0, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## [리스트] 조작: inset()\n",
+    "a = [6, 1, 0, 3, 4, 5, 6]   \n",
+    "a.insert(2, 9)        #2번째에 값 9를 삽입\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fb2a4549-31bc-4cbf-98dc-e48f63dd7b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## [리스트] 조작: inset()\n",
+    "a = [6, 1, 0, 3, 4, 5, 6]   \n",
+    "a.insert(2, 9)        #2번째에 값 9를 삽입\n",
+    "a.index(0)         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e9651301-1e73-4984-a2c9-f044ccd51abc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 1, 0, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## [리스트] 조작: remove()\n",
+    "a.remove(9)           #9를 찾아 제거\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4f3e2b33-f194-404d-a39e-ea8afa5ca7b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.index(0)         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b1e3c1f5-d706-40fc-885c-30bc4ea8bb82",
    "metadata": {},
    "outputs": [
@@ -539,20 +729,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b06eee62-89d3-4b0b-9bfd-3312c5175aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 4, 5, 6, 6]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 생성 및 조작\n",
+    "a = [6, 1, 0, 3, 4, 5, 6]   \n",
+    "a.sort(reverse=False) #오름차순으로 정렬(내림차순은 True 또는 생략), a 자신을 정렬시킴\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f422009-455b-490e-9c44-79931c09145e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "0e8f690e-c446-4c8c-b4e9-b78fea0dc3ef",
    "metadata": {},
    "source": [
     "### **관련 함수**\n",
-    "#### > len() 항목 개수 구하기\n",
-    "#### > sorted() 항목을 정렬하여 리스트를 반환(원 리스트는 변화 없음)\n",
-    "#### > del() 특정 항목 제거하기\n",
-    "#### > clear() 모든 항목 제거하기"
+    "##### > len() 항목 개수 구하기\n",
+    "##### > sorted() 항목을 정렬하여 리스트를 반환(원 리스트는 변화 없음)\n",
+    "##### > del() 특정 항목 제거하기\n",
+    "##### > clear() 모든 항목 제거하기\n",
+    "##### > max(), min(), sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
+   "id": "23d0a940-0636-4ed4-a8cd-7a364f36fe55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 관련 함수: len()\n",
+    "a = [5, 3, 7, 8, 2, 1]\n",
+    "len(a)    # 리스트 항목의 수를 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "8a233b9d-c44a-4609-af1d-b4f5186af3cb",
    "metadata": {},
    "outputs": [
@@ -562,7 +808,7 @@
        "[1, 2, 3, 5, 7, 8]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,13 +816,13 @@
    "source": [
     "## 관련 함수: 정렬\n",
     "a = [5, 3, 7, 8, 2, 1]\n",
-    "asort = sorted(a)    # 값들을 정렬\n",
+    "asort = sorted(a)    # 전달 받은 리스트 항목 값들을 정렬하여 반환\n",
     "asort"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "ff14b5ab-9c3a-4928-928e-7feb6f46eed4",
    "metadata": {},
    "outputs": [
@@ -586,7 +832,7 @@
        "[1, 2, 3, 5, 7, 8]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "c85b7472-d722-4299-81b5-6d09e8da99e5",
    "metadata": {},
    "outputs": [
@@ -607,16 +853,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 8, 2, 1]\n"
+      "[1, 3, 5, 7, 8]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,6 +872,31 @@
     "del(a[1])                #1번째 값을 제거\n",
     "print(a)\n",
     "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e95cd2a0-8d47-44b1-b300-b8197c1a65d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 관련 함수: sum()\n",
+    "a = [5, 3, 7, 8, 2, 1]\n",
+    "max(a) \n",
+    "min(a)\n",
+    "sum(a)"
    ]
   },
   {
@@ -806,6 +1077,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3f0e3a-d48d-49ca-9add-05e32785e77b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "2248cff1-6325-43d5-a4ce-551b6cab6e28",
    "metadata": {},
@@ -959,9 +1238,9 @@
    "metadata": {},
    "source": [
     "### **[실습-1] List로 막대 그래프 그리기 (응용)**\n",
-    "#### > List를 랜덤 수로 초기화 함. (range는 0~9까지)\n",
-    "#### > List의 길이는 30으로 함\n",
-    "#### > import seaborn 모듈 사용 빈도수 막대 그래프 그리기"
+    "##### > List를 랜덤 수로 초기화 함. (range는 0~9까지)\n",
+    "##### > List의 길이는 30으로 함\n",
+    "##### > import seaborn 모듈 사용 빈도수 막대 그래프 그리기"
    ]
   },
   {
@@ -1268,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 44,
    "id": "003e66a1-b464-4961-8bb7-a665731b7f36",
    "metadata": {},
    "outputs": [
@@ -1285,6 +1564,29 @@
     "b = 10, 20, 30    #튜플의 패킹(Packing)  \n",
     "x, y, z = b       #언패킹(Unpacking)  \n",
     "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "339d28ce-add3-418f-8d56-febcea986989",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 패킹(Packing), 언패킹(Unpacking)\n",
+    "b = 10,           #튜플의 패킹(Packing)  \n",
+    "type(b)"
    ]
   },
   {
@@ -2893,14 +3195,6 @@
     "ddf = ddf.drop( 'avg', axis = 'columns')     # 컬럼 이름으로 컬럼 제거\n",
     "ddf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "207f2126-a96d-4359-821f-5df72ebc517e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
