--- a/Ch02_AnacondaJupyterLab.ipynb
+++ b/Ch02_AnacondaJupyterLab.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "## ▷ Jupyter Lab 실행 [A]\n",
     "#### > 시작 메뉴에서 : Anaconda Prompt 실행\n",
-    "#### >> 'D:'로 드라이브 이동\n",
+    "#### >> 'D:'로 드라이브 이동(원하는 자신의 드라이브로 이동)\n",
     "#### >> 'jupyter lab' 으로 실행"
    ]
   },
@@ -126,6 +126,7 @@
     "## ▷ Jupyter Lab 관련 용어\n",
     "#### ㅇNotebook : .ipynb 확장자를 갖는 작업 파일 (Cell들로 구성)\n",
     "#### ㅇCell : Notebook 내에서 실행 가능한 작업 단위(Code, Markdown 등으로 구성)\n",
+    "#### >> Code는 코드 실행용 Cell, Markdown은 문서화를 위한 스크립트 Cell\n",
     "#### >> Cell 실행은 Shift+Enter 선택"
    ]
   },
