--- a/HW17_DataStructure.ipynb
+++ b/HW17_DataStructure.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "168e4c9f-1532-4aa1-a057-c1e50cbda474",
+   "metadata": {},
+   "source": [
+    "## **[과제] 아래의 Data Structure 문제 해결하기**\n",
+    "#### (해결한 결과를 Ch17_학번.ipynb 파일로 LMS에 첨부로 제출하세요.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bd5f3b6-4542-415b-8110-85e24247111d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "9acb01b8-645f-4290-a107-5bfc62165213",
    "metadata": {},
    "source": [
@@ -259,16 +276,16 @@
     "    alist.append(x)\n",
     "print(alist)\n",
     "\n",
-    "# 빈도 리스트 data 만들기\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
     "# 인덱스 리스트 idx 만들기\n",
     "\n",
     "\n",
     "\n",
     "\n",
+    "# 빈도 리스트 data 만들기\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "## pandas 패키지 활용 : 데이터 시리즈(2차원 자료 구조) 구성\n",
     "import pandas as pd\n",
     "ds = pd.Series(data, index = idx)\n",
