--- a/HW05_DataAnaysisBasic.ipynb
+++ b/HW05_DataAnaysisBasic.ipynb
@@ -5,25 +5,25 @@
    "id": "4734e560-0ff7-4ef4-b539-d8fca8c071b8",
    "metadata": {},
    "source": [
-    "## [응용 실습] excel > csv > Data Frame > Data Frame 파생변수 추가 > 그래프 그리기 \n",
+    "### **[과제] excel > csv > Data Frame > Data Frame 파생변수 추가 > 그래프 그리기**\n",
     "#### 1. excel > csv 파일 형식 변환\n",
-    "##### > LMS에 제시된 엑셀 파일 Test_result.xlsx를 CSV 타입 파일로 변환\n",
+    "###### > LMS에 제시된 엑셀 파일 Test_result.xlsx를 CSV 타입 파일로 변환\n",
     "#### 2. csv > Data Frame 데이터 변환\n",
-    "##### > 변환한 CSV 파일을 읽어 데이터 프레임으로 변환\n",
-    "##### > 변환된 데이터 프레임의 정보 확인\n",
-    "##### > Index 컬럼 'Unnamed: 0' 제거\n",
+    "###### > 변환한 CSV 파일을 읽어 데이터 프레임으로 변환\n",
+    "###### > 변환된 데이터 프레임의 정보 확인\n",
+    "###### > Index 컬럼 'Unnamed: 0' 제거\n",
     "#### 3. Data Frame에 'Total' 파생변수를 추가\n",
-    "##### > 'Total'은 총점으로 (Attendance + Homework + Midterm + Final)\n",
+    "###### > 'Total'은 총점으로 (Attendance + Homework + Midterm + Final)\n",
     "#### 4. Data Frame에 'grade' 파생변수를 추가\n",
-    "##### > 'Grade'는 총점에 대한 등급 : \"A+\" : 100-95, \"A\" : 94-90, \"B+\" : 89-85, \"B\" : 84-80,\n",
-    "#####     \"C+\" : 79-75, \"C\" : 74-70, \"D+\" : 69-65, \"D\" : 64-60, \"F\" : 59-0\n",
+    "###### > 'Grade'는 총점에 대한 등급 : \"A+\" : 100-95, \"A\" : 94-90, \"B+\" : 89-85, \"B\" : 84-80,\n",
+    "######     \"C+\" : 79-75, \"C\" : 74-70, \"D+\" : 69-65, \"D\" : 64-60, \"F\" : 59-0\n",
     "#### 5. 파생 변수로 그래프 그리기\n",
-    "##### > 'Grade'별 인원 수 분포 구하고, 확인하기  \n",
-    "##### > 'Grade'별 인원 수 막대 그래프 그리기 \n",
-    "##### > x-축을 높은 등급 순으로 그리기\n",
-    "##### >>[도전] 막대에 빈도 값, 표 타이틀, 축 레이블 표시하기\n",
+    "###### > 'Grade'별 인원 수 분포 구하고, 확인하기  \n",
+    "###### > 'Grade'별 인원 수 막대 그래프 그리기 \n",
+    "###### > x-축을 높은 등급 순으로 그리기\n",
+    "###### >>[도전] 막대에 빈도 값, 표 타이틀, 축 레이블 표시하기\n",
     "#### 6. 데이터 프레임을 Test_result2.csv 파일로 변환\n",
-    "##### > index는 제외하고 변환"
+    "###### > index는 제외하고 변환"
    ]
   },
   {
