--- a/HW06_DataHandling.ipynb
+++ b/HW06_DataHandling.ipynb
@@ -5,12 +5,12 @@
    "id": "6a27d5b2-2c2f-4bcb-bf2d-debaec1fac93",
    "metadata": {},
    "source": [
-    "## **[과제 Ch06] 데이터 전처리 과제**"
+    "## **[과제] Ch06 데이터 전처리**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "34bd562d-746a-4e64-aadb-105a862ec7e3",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "4   5       2    25       80       65"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
    "source": [
     "## 실습용 데이터 프레임 생성\n",
     "import pandas as pd\n",
-    "exam = pd.read_csv('exam.csv')\n",
+    "exam = pd.read_csv('exam_csv.csv')\n",
     "exam.head()"
    ]
   },
@@ -113,10 +113,10 @@
    "id": "c8268f17-67a1-4574-b266-6afbb3ae5f93",
    "metadata": {},
    "source": [
-    "### **[실습 6-1] exam 데이터 프레임에 'total'과 'mean', 'result' 파생변수가 추가된 new_exam 데이터 프레임 생성**\n",
-    "#### > 'total'은 과목의 합계\n",
-    "#### > 'mean'은 전체 과목의 평균\n",
-    "#### > 'result'는 'mean' >= 60 이면 'pass', 아니면 'fail' "
+    "#### **[실습 6-1] exam 데이터 프레임에 'total'과 'mean', 'result' 파생변수가 추가된 new_exam 데이터 프레임 생성**\n",
+    "##### > 'total'은 과목의 합계\n",
+    "##### > 'mean'은 전체 과목의 평균\n",
+    "##### > 'result'는 'mean' >= 60 이면 'pass', 아니면 'fail' "
    ]
   },
   {
@@ -418,13 +418,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d952ae-287c-4d4b-b409-fa557fd93aff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "6909b06b-8f22-429c-80cc-27016b6a00dc",
    "metadata": {},
    "source": [
-    "### **[실습 6-2] 'nclass'별 인원 수 구하기**\n",
-    "#### **new_exam 데이터 프레임을 사용하여**\n",
-    "#### > 결과 데이터 프레임에 'nclass'와 'count'가 나타나도록 한다."
+    "#### **[실습 6-2] 'nclass'별 인원 수 구하기**\n",
+    "##### **new_exam 데이터 프레임을 사용하여**\n",
+    "##### > 결과 데이터 프레임에 'nclass'와 'count'가 나타나도록 한다."
    ]
   },
   {
@@ -508,13 +516,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20496e79-dd34-4413-ba84-b93bfaf5ad7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "36bd92c5-3c42-4efd-a5b1-b62349812806",
    "metadata": {},
    "source": [
-    "### **[실습 6-3] 원하는 통계 결과만 필터링 하여 구하기**\n",
-    "#### **new_exam 데이터 프레임을 사용하여**\n",
-    "#### > 'nclass'별 'mean'의 평균을구하여, 평균 값이 70 이상인 행만 구하기"
+    "#### **[실습 6-3] 원하는 통계 결과만 필터링 하여 구하기**\n",
+    "##### **new_exam 데이터 프레임을 사용하여**\n",
+    "##### > 'nclass'별 'mean'의 평균을구하여, 평균 값이 70 이상인 행만 구하기"
    ]
   },
   {
@@ -574,19 +590,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de747cd0-5c4c-4ac1-b4fb-f915d5918591",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "6484b312-6913-453a-8a84-c124a05bc178",
    "metadata": {},
    "source": [
-    "-------------------\n",
-    "### **[실습 6-4] 데이터 행, 열 분리 및 병합**\n",
-    "#### **new_exam 데이터 프레임을 사용하여**\n",
-    "#### <1> exam_mean 데이터 프레임 만들기\n",
-    "#### <1-1> new_exam 데이터 프레임에서  'id', 'nclass', 'total', 'mean' 변수를 추출하여 exam_mean 만들기\n",
-    "#### <1-2> new_exam 데이터 프레임에서  'id', 'math', 'english', 'science' 변수를 추출하여 exam_subj 만들기\n",
-    "#### <2> exam_mean과 exam_subj를 id를 기준으로 열 합병하여 exam_result 데이터 프레임 생성\n",
-    "#### <3> nclass로 행 분리된 exam_1class, exam_2class, exam_3class, exam_4class, exam_5class 프레임 생성\n",
-    "#### <4> exam_1class, exam_2class, exam_3class, exam_4class, exam_5class 프레임들의 모든 행들을 병합하여 exam_nclass 생성"
+    "#### **[실습 6-4] 데이터 행, 열 분리 및 병합**\n",
+    "##### **new_exam 데이터 프레임을 사용하여**\n",
+    "##### <1> exam_mean 데이터 프레임 만들기\n",
+    "###### <1-1> new_exam 데이터 프레임에서  'id', 'nclass', 'total', 'mean' 변수를 추출하여 exam_mean 만들기\n",
+    "###### <1-2> new_exam 데이터 프레임에서  'id', 'math', 'english', 'science' 변수를 추출하여 exam_subj 만들기\n",
+    "##### <2> exam_mean과 exam_subj를 id를 기준으로 열 합병하여 exam_result 데이터 프레임 생성\n",
+    "##### <3> nclass로 행 분리된 exam_1class, exam_2class, exam_3class, exam_4class, exam_5class 프레임 생성\n",
+    "##### <4> exam_1class, exam_2class, exam_3class, exam_4class, exam_5class 프레임들의 모든 행들을 병합하여 exam_nclass 생성"
    ]
   },
   {
