--- a/HW07_DataNormalize.ipynb
+++ b/HW07_DataNormalize.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "### **[실습-1] 결측치를 제외하고 통계 구하기**\n",
-    "#### 1. 'mpg.csv' 파일을 읽어서 데이터 프레임을 구성하시오.\n",
-    "#### 2. 데이터 프레임의 'cty'열에 대한 boxplot 그래프 그리기\n",
-    "#### 3. 하한값, 상한값 구하기\n",
-    "#### 4. 극단치를 결측 처리하기\n",
-    "##### > 결측 처리 결과 'cty' 값이 NaN인 행 검색\n",
-    "#### 5. 'cty'의 결측치 제거하고 분석하기\n",
-    "##### > model별 cty 평균 구하기"
+    "##### 1. 'mpg.csv' 파일을 읽어서 데이터 프레임을 구성하시오.\n",
+    "##### 2. 데이터 프레임의 'cty'열에 대한 boxplot 그래프 그리기\n",
+    "##### 3. 하한값, 상한값 구하기\n",
+    "##### 4. 극단치를 결측 처리하기\n",
+    "###### > 결측 처리 결과 'cty' 값이 NaN인 행 검색\n",
+    "##### 5. 'cty'의 결측치 제거하고 분석하기\n",
+    "###### > model별 cty 평균 구하기"
    ]
   },
   {
@@ -711,18 +711,18 @@
    "id": "2cde68e7-cd64-4ac5-bfd3-241874e31f90",
    "metadata": {},
    "source": [
-    "## **[실습-2] mpg 데이터 가공하기**\n",
-    "#### 1. csv 파일을 읽어서 데이터 프레임 구축\n",
-    "#### 2. mpg 데이터 프레임에서 'trans'열의 값 빈도 분포를 확인\n",
-    "#### 3. 'auto' 파생변수 생성\n",
-    "#### > 'trans' 열 값에 'auto'가 있으면 1, 'manual'이 있으면 0으로 처리, 그 외는 NaN 처리\n",
-    "#### 4. 'gear' 파생변수 생성\n",
-    "#### > 'trans' 열 값의 ')' 앞에 값으로 판단, 숫자가 아니면 NaN 처리\n",
-    "#### 5. 'auto'와 'gear'열의 결측치(NaN) 확인 \n",
-    "#### > 결측치 빈도 확인\n",
-    "#### > 결측치 행 확인\n",
-    "#### 6. 'auto'와 'gear'별 분포 수 데이터 프레임 생성\n",
-    "#### > 단, 결측치(NaN) 행은 사전에 차단"
+    "### **[실습-2] mpg 데이터 가공하기**\n",
+    "##### 1. csv 파일을 읽어서 데이터 프레임 구축\n",
+    "##### 2. mpg 데이터 프레임에서 'trans'열의 값 빈도 분포를 확인\n",
+    "##### 3. 'auto' 파생변수 생성\n",
+    "###### > 'trans' 열 값에 'auto'가 있으면 1, 'manual'이 있으면 0으로 처리, 그 외는 NaN 처리\n",
+    "##### 4. 'gear' 파생변수 생성\n",
+    "###### > 'trans' 열 값의 ')' 앞에 값으로 판단, 숫자가 아니면 NaN 처리\n",
+    "##### 5. 'auto'와 'gear'열의 결측치(NaN) 확인 \n",
+    "###### > 결측치 빈도 확인\n",
+    "###### > 결측치 행 확인\n",
+    "##### 6. 'auto'와 'gear'별 분포 수 데이터 프레임 생성\n",
+    "###### > 단, 결측치(NaN) 행은 사전에 차단"
    ]
   },
   {
