--- a/HW08_Graph.ipynb
+++ b/HW08_Graph.ipynb
@@ -2,40 +2,41 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b1e3840-6322-490f-844d-f5cfee923810",
+   "id": "5f8703f5-eca8-4728-976b-f71f461e108e",
    "metadata": {},
    "source": [
-    "## [응용 실습] csv > Data Frame > Data Frame 파생변수 추가 > 그래프 그리기 \n",
-    "#### **1. csv > Data Frame 데이터 변환**\n",
-    "##### > Test_result2.csv 파일을 데이터 프레임으로 변환\n",
-    "##### > index는 제외하고 변환\n",
-    "##### > 변환된 데이터 프레임의 정보 확인\n",
-    "#### **2. 그룹별 통계 데이터 프레임 만들기**\n",
-    "##### >'Grade'별 학생수 구하기\n",
-    "#### **3. 'Grade'별 'Cnt_men'의 빈도수에 대한 막대 그래프 그리기**\n",
-    "##### > 'A+', 'A', 'B+', 'B', 'C+', 'C', 'D+', 'D', 'F' 순으로 그리기\n",
-    "#### **4. 'Grade'별 'Cnt_men'의 빈도수에 대한 선 그래프 그리기**\n",
-    "##### > 'A+', 'A', 'B+', 'B', 'C+', 'C', 'D+', 'D', 'F' 순으로 그리기\n",
-    "#### **5. 파이 그래프 그리기**\n",
-    "##### > 등급별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
-    "#### **6. Data Frame에 'Grade_group' 파생변수를 추가**\n",
-    "##### > 'Grade_group'는 'Grade'에 대한 등급 그룹 : ['A+', 'A'] : 'A', ['B+', 'B'] : 'B',\n",
-    "#####      ['C+', 'C'] : 'C',  ['D+', 'D'] : 'D', ['F'] : 'F' \n",
-    "#### **7. 'Grade' 그룹별 통계 프레임 만들기**\n",
-    "##### >'Grade_group'별 학생수 'Cnt_men' 구하기\n",
-    "##### >'Grade_group'별 학생수 비율 'Rate_men' 구하기\n",
-    "#### **8. 파이 그래프 그리기**\n",
-    "##### > 'Grade_group'별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
-    "#### **9. 막대 그래프 그리기**\n",
-    "#### > 'Class'별 'Grade'의 빈도 수 비교하는 막대 그래프 그리기 \n",
-    "#### **10. 분포 상자 그래프 그리기**\n",
-    "##### > 'Class' 간의 총점 'Total'에 분포 비교 상자 그래프 그리기"
+    "### **[과제] Ch08 그래프 그리기**\n",
+    "#### : csv > Data Frame > Data Frame 파생변수 추가 > 그래프 그리기\n",
+    "##### **1. csv > Data Frame 데이터 변환**\n",
+    "###### > Test_result2.csv 파일을 데이터 프레임으로 변환\n",
+    "###### > index는 제외하고 변환\n",
+    "###### > 변환된 데이터 프레임의 정보 확인\n",
+    "##### **2. 그룹별 통계 데이터 프레임 만들기**\n",
+    "###### >'Grade'별 학생수 구하기\n",
+    "##### **3. 'Grade'별 'Cnt_men'의 빈도수에 대한 막대 그래프 그리기**\n",
+    "###### > 'A+', 'A', 'B+', 'B', 'C+', 'C', 'D+', 'D', 'F' 순으로 그리기\n",
+    "##### **4. 'Grade'별 'Cnt_men'의 빈도수에 대한 선 그래프 그리기**\n",
+    "###### > 'A+', 'A', 'B+', 'B', 'C+', 'C', 'D+', 'D', 'F' 순으로 그리기\n",
+    "##### **5. 파이 그래프 그리기**\n",
+    "###### > 등급별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
+    "##### **6. Data Frame에 'Grade_group' 파생변수를 추가**\n",
+    "###### > 'Grade_group'는 'Grade'에 대한 등급 그룹 : ['A+', 'A'] : 'A', ['B+', 'B'] : 'B',\n",
+    "######      ['C+', 'C'] : 'C',  ['D+', 'D'] : 'D', ['F'] : 'F' \n",
+    "##### **7. 'Grade' 그룹별 통계 프레임 만들기**\n",
+    "###### >'Grade_group'별 학생수 'Cnt_men' 구하기\n",
+    "###### >'Grade_group'별 학생수 비율 'Rate_men' 구하기\n",
+    "##### **8. 파이 그래프 그리기**\n",
+    "###### > 'Grade_group'별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
+    "##### **9. 막대 그래프 그리기**\n",
+    "##### > 'Class'별 'Grade'의 빈도 수 비교하는 막대 그래프 그리기 \n",
+    "##### **10. 분포 상자 그래프 그리기**\n",
+    "###### > 'Class' 간의 총점 'Total'에 분포 비교 상자 그래프 그리기"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7f39b239-ba04-4ea7-9caf-6c929c9e2fe2",
+   "id": "c7d6c5da-c241-4422-92db-ba47f09377ad",
    "metadata": {},
    "outputs": [
     {
@@ -234,15 +235,16 @@
     "#### 1. csv > Data Frame 데이터 변환\n",
     "##### > Test_result2.csv 파일을 데이터 프레임으로 변환\n",
     "##### > index는 제외하고 변환\n",
+    "import pandas as pd\n",
     "\n",
-    "\n",
+    "df_test = pd.read_csv('Test_result2_csv.csv')\n",
     "df_test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "51e3741f-0b14-40f2-88e9-0a80ef64c685",
+   "id": "0671b6d5-d41b-499c-9500-4a6ad11cdfa5",
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +273,13 @@
    "source": [
     "#### 1. csv > Data Frame 데이터 변환\n",
     "##### > 변환된 데이터 프레임의 정보 확인\n",
-    "\n"
+    "df_test.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ad357ab2-2fe5-4f85-b743-ff1b36fc8d8c",
+   "id": "2f1b666e-a2cb-46cd-a6ec-f4994e509aac",
    "metadata": {},
    "outputs": [
     {
@@ -365,14 +367,13 @@
     "#### 2. 그룹별 통계 데이터 프레임 만들기\n",
     "##### >'Grade'별 학생수 구하기\n",
     "\n",
-    "\n",
-    "df_grp"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "95c7a26d-3ff5-4ef4-8560-a7b4da8c289a",
+   "id": "d4f7779b-f318-4e07-8bbb-1670c26bcb07",
    "metadata": {},
    "outputs": [
     {
@@ -409,13 +410,14 @@
    "source": [
     "#### 3. 'Grade'별 'Cnt_men'의 빈도수에 대한 막대 그래프 그리기\n",
     "##### > 'A+', 'A', 'B+', 'B', 'C+', 'C', 'D+', 'D', 'F' 순으로 그리기\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7b12c4a5-92a7-4ed0-bd75-23017a01c415",
+   "id": "f614ae8c-2fdc-4bd0-975f-61d4f42eec5d",
    "metadata": {},
    "outputs": [
     {
@@ -458,13 +460,15 @@
    "source": [
     "#### . 'Grade_group'의 빈도수에 대한 선 그래프 구하기\n",
     "##### > 'A+', 'A', 'B+', 'B', 'C+', 'C', 'D+', 'D', 'F' 순으로 그리기\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "cab089e2-c987-4095-a777-56132c6c2831",
+   "id": "138c47a1-f809-4f3a-b962-3b04bcb1629b",
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +515,15 @@
    "source": [
     "#### 5. 파이 그래프 그리기\n",
     "##### > 등급별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "eb7fccce-3188-4c3c-8a69-1d23b4edecc2",
+   "id": "7f351787-b4d0-49d3-aaf1-3059b9fcccc1",
    "metadata": {},
    "outputs": [
     {
@@ -615,13 +621,13 @@
     "#####      ['C+', 'C'] : 'C',  ['D+', 'D'] : 'D', ['F'] : 'F' \n",
     "\n",
     "\n",
-    "df_grp"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2acf46de-d456-4c22-81f6-da6e74c07efb",
+   "id": "4647f095-e9da-4cb9-8c0c-12b61285afc7",
    "metadata": {},
    "outputs": [
     {
@@ -693,18 +699,18 @@
     }
    ],
    "source": [
-    "#### 7. 'Grade' 그룹별 통계 프레임 만들기\n",
+    "#### **7. 'Grade' 그룹별 통계 프레임 만들기**\n",
     "##### >'Grade_group'별 학생수 'Cnt_men' 구하기\n",
     "##### >'Grade_group'별 학생수 비율 'Rate_men' 구하기\n",
     "\n",
     "\n",
-    "df_grp"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b9f5afe4-d8bf-444f-a74e-18bcd890cc23",
+   "id": "6885ae06-e1fc-409a-b3e8-6e4be62975bf",
    "metadata": {},
    "outputs": [
     {
@@ -781,13 +787,13 @@
     "##### >'Grade_group'별 학생수 비율 'Rate_men' 구하기\n",
     "\n",
     "\n",
-    "df_grp"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8a132304-b779-4ee8-9ca5-5e24181fa954",
+   "id": "e6157918-7834-4ffc-9eba-d1a0b9abfa33",
    "metadata": {},
    "outputs": [
     {
@@ -825,13 +831,15 @@
    "source": [
     "#### 8.1 'Grade_group'별 파이 그래프 그리기\n",
     "##### > 'Grade_group'별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "509dd6d3-fa91-4d93-989e-3b06ba20c165",
+   "id": "8a4bd8b2-11d1-4535-a11e-5ee3885bf603",
    "metadata": {},
    "outputs": [
     {
@@ -869,13 +877,15 @@
    "source": [
     "#### 8.2 'Grade_group'별 파이 그래프 그리기\n",
     "##### > 'Grade_group'별 학생 수(Cnt_men)에 대한 파이그래프 그리기\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "85bf8d32-1855-42e8-96ee-e077a960ed65",
+   "id": "4169278a-6c7f-4968-8085-4c03d67d0111",
    "metadata": {},
    "outputs": [
     {
@@ -901,13 +911,15 @@
    ],
    "source": [
     "#### 8.3 'Grade_group'별 학생 수(Cnt_men)에 대한 파이 그래프 그리기\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b8115417-e34d-4cb5-8a4d-6439abe1fe84",
+   "id": "9b262349-96d1-4d57-a108-4bac18704230",
    "metadata": {},
    "outputs": [
     {
@@ -945,13 +957,15 @@
    ],
    "source": [
     "#### 9. 'Class'별 'Grade'의 빈도 수 비교하는 막대 그래프 그리기\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "395ef7ff-cb26-4257-b449-2b6a43fed257",
+   "id": "b6115a52-9ded-4055-9cf5-a299126b314c",
    "metadata": {},
    "outputs": [
     {
@@ -989,13 +1003,15 @@
    ],
    "source": [
     "#### 10. 'Class' 간의 총점 'Total'에 분포 비교 상자 그래프 그리기 \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57994235-c150-422b-b108-fb0a74b0f6c6",
+   "id": "835bf568-144f-4879-a1c1-663f0c4eb47b",
    "metadata": {},
    "outputs": [],
    "source": []
